--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --secondary-color: #9333ea; */
   /* --primary-color: #7ED7A5;  */
   --background-color: #F8F9FA;
-  --container-color: #FFFFFF;
+  --card-color: #FFFFFF;
   --border-color: #E6E7E8;
   --text-color: #333333;
   --text-gray: #6C757D;
@@ -25,7 +25,7 @@
   --secondary-color: #9333ea; */
   /* --primary-color: #34B27B; */
   --background-color: #121212;
-  --container-color: #242424;
+  --card-color: #242424;
   --border-color: #363636;
   --text-color: #FaFaFa;
   --text-gray: #818181;
